testdata/test/resources/com/yafred/asn1/test/should_fail/sequence_duplicate_tag2.asn
-- FAILS: duplicate tag in SEQUENCE

Sequence DEFINITIONS IMPLICIT TAGS ::= BEGIN

Root ::= SEQUENCE {
	un BOOLEAN,
	deux BOOLEAN OPTIONAL,
	...,
	trois BOOLEAN OPTIONAL,
	...,
	quatre BOOLEAN
}



END